[gd_scene load_steps=5 format=3 uid="uid://1vlmyj4hjij0"]

[ext_resource type="Script" path="res://scripts/experience_bar.gd" id="1_uq6c5"]
[ext_resource type="Texture2D" uid="uid://odxmqy8nku41" path="res://assets/ui/HealthBars/Style 1/7/7.png" id="2_hp8hx"]
[ext_resource type="Texture2D" uid="uid://diq0lhrru60ys" path="res://assets/ui/HealthBars/Style 1/7/7sPurble.png" id="3_lxoau"]
[ext_resource type="FontFile" uid="uid://vbsmq6u2bioe" path="res://assets/fonts/PixelMiddle.ttf" id="4_7c6y1"]

[node name="ExperienceBar" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
script = ExtResource("1_uq6c5")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 50.0
texture_under = ExtResource("2_hp8hx")
texture_progress = ExtResource("3_lxoau")
texture_progress_offset = Vector2(64, 0)

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 9.0
offset_right = 60.0
offset_bottom = 32.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_7c6y1")
text = "Level 1"

[node name="XPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = -10.0
offset_right = 126.0
offset_bottom = 4.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("4_7c6y1")
text = "50 / 100 XP"
